PetAdoptions/k8s-manifests/00-namespace.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: petadoptions
  labels:
    name: petadoptions
    app: petadoptions
