PetAdoptions/k8s-manifests/04-traffic-generator.yaml
# Traffic Generator - Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traffic-generator
  namespace: petadoptions
  labels:
    app: traffic-generator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traffic-generator
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: traffic-generator
    spec:
      serviceAccountName: traffic-generator-sa
      topologySpreadConstraints:
      - labelSelector:
          matchLabels:
            app: traffic-generator
        maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: ScheduleAnyway
      - labelSelector:
          matchLabels:
            app: traffic-generator
        maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
      containers:
      - name: traffic-generator
        image: <AWS_ACCOUNT_ID>.dkr.ecr.<AWS_REGION>.amazonaws.com/petadoptions/trafficgenerator:latest
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          requests:
            cpu: "256m"
            memory: "512Mi"
          limits:
            cpu: "256m"
            memory: "512Mi"
        volumeMounts:
        - name: ca-bundle
          mountPath: /etc/ssl/certs
          readOnly: true
      volumes:
      - name: alb-cert
        configMap:
          name: alb-selfsigned-cert
      - name: ca-bundle
        emptyDir: {}
